[project]
name = "fuzzy-invention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "crewai>=0.121.1",
    "deepeval>=3.0.2",
    "dependency-injector>=4.47.1",
    "fastapi>=0.115.9",
    "google-adk>=1.1.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "knowledge-graph>=0.0.33",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "llama-index>=0.12.38",
    "markdown>=3.8",
    "msal>=1.32.3",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.9",
    "pytest>=8.3.5",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    "ragas>=0.2.15",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "structlog>=25.3.0",
    "tensorflow>=2.19.0",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "torch>=2.7.0",
    "uvicorn>=0.34.2",
]
